# Security-vuln-scanner

./: Docker.md  README.md  docker-compose.prod.yml  docker-compose.yml  health-check.sh  start-docker.bat
backend/go-services/: go.mod
backend/go-services/port-scanner/: .dockerignore  Dockerfile  main.go
backend/migrations/: 001_init.sql  init.sql
backend/rust-api/: .dockerignore  .env  .env.docker  Cargo.toml  Dockerfile  Dockerfile.latest  Dockerfile.prebuilt
backend/rust-api/src/: main.rs  models.rs
backend/rust-api/src/services/: scanner.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/scan/: page.tsx
frontend/components/: CyberEffects.tsx  Header.tsx
